integrated multiple language logic,changed include method in Repository, changed Slider method and CRUD operations, bug fixed Cloudinary

--- a/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Skydash Admin</title>
+    <title>Connex Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/assets/vendors/feather/feather.css">
     <link rel="stylesheet" href="~/assets/vendors/ti-icons/css/themify-icons.css">
@@ -120,22 +120,20 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" asp-action="Index" asp-controller="Dashboard">
                             <i class="icon-grid menu-icon"></i>
-                            <span class="menu-title">Dashboard</span>
+                            <span class="menu-title">İdarə Paneli</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                             <i class="icon-layout menu-icon"></i>
-                            <span class="menu-title">UI Elements</span>
+                            <span class="menu-title">Səhifələr</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Slider">Slaydlar</a></li>
                             </ul>
                         </div>
                     </li>
