--- a/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -137,6 +137,7 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Slider">Slaydlar</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Service">Servislər</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Setting">Parametrlər</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Partner">Partnyorlar</a></li>
                             </ul>
                         </div>
