About CRUD is done

--- a/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -137,6 +137,8 @@
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Project">Layihələr</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="About">Haqqında mətnləri</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Slider">Slaydlar</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Service">Servislər</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Setting">Parametrlər</a></li>
@@ -144,6 +146,8 @@
                             </ul>
                         </div>
                     </li>
+
+
 
                 </ul>
             </nav>
