--- a/Connex.Presentation/Areas/Admin/Views/Project/Update.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Project/Update.cshtml
@@ -76,6 +76,8 @@
 
 
                 <div class="form-group">
+                    <img src="@Model.ImagePath" width="100" height="100"/>
+                    <input  asp-for="ImagePath" type="hidden"/>
                     <label for="exampleInputUsername1"> Şəkil seçin</label>
                     <input class="form-control" asp-for="Image">
                     <span asp-validation-for="Image" class="text-danger"></span>
