--- a/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/assets/vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" type="text/css" href="~/assets/js/select.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/43.2.0/ckeditor5.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
     <link rel="stylesheet" href="sweetalert2.min.css">
 
@@ -137,6 +138,7 @@
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Subscriber">Abunəçilər</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Project">Layihələr</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="About">Haqqında mətnləri</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Slider">Slaydlar</a></li>
@@ -147,6 +149,19 @@
                         </div>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+                            <i class="mdi mdi-layers"></i>
+                            <span class="menu-title">Servislər</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="ui-basic">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Email">Email Göndər</a></li>
+                                
+                            </ul>
+                        </div>
+                    </li>
 
 
                 </ul>
@@ -218,6 +233,7 @@
     <script src="~/assets/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="~/assets/js/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="sweetalert2.min.js"></script>
 
     <!-- <script src="~/assets/js/Chart.roundedBarCharts.js"></script> -->
