project is done,but accountController dont written

--- a/Connex.Presentation/Areas/Admin/Views/Project/Update.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Project/Update.cshtml
@@ -21,7 +21,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputUsername1">Azərbaycanca açıqlama</label>
-                        <textarea class="form-control" id="description0" required asp-for="@Model.ProjectDetails[0].Description" placeholder="Açıqlama daxil edin"></textarea>
+                        <textarea class="form-control" id="description0"  asp-for="@Model.ProjectDetails[0].Description" placeholder="Açıqlama daxil edin"></textarea>
                         <span asp-validation-for="@Model.ProjectDetails[0].Description" class="text-danger"></span>
                     </div>
 
@@ -43,7 +43,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputUsername1">İngiliscə açıqlama</label>
-                        <textarea class="form-control" id="description1" required asp-for="@Model.ProjectDetails[1].Description" placeholder="Açıqlama daxil edin"></textarea>
+                        <textarea class="form-control" id="description1"  asp-for="@Model.ProjectDetails[1].Description" placeholder="Açıqlama daxil edin"></textarea>
                         <span asp-validation-for="@Model.ProjectDetails[1].Description" class="text-danger"></span>
                     </div>
 
@@ -64,7 +64,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputUsername1">Rusca açıqlama</label>
-                        <textarea class="form-control" id="description2" required asp-for="@Model.ProjectDetails[2].Description" placeholder="Açıqlama daxil edin"></textarea>
+                        <textarea class="form-control" id="description2"  asp-for="@Model.ProjectDetails[2].Description" placeholder="Açıqlama daxil edin"></textarea>
                         <span asp-validation-for="@Model.ProjectDetails[2].Description" class="text-danger"></span>
                     </div>
 
