--- a/Connex.Presentation/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Views/Shared/_Layout.cshtml
@@ -78,8 +78,8 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/296ce7492d.js" crossorigin="anonymous"></script>
 <script src="~/js/layoutRender.js"></script>
-<script src="~/js/indexRender.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 <!-- End Google Map -->
 
