--- a/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Connex.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,11 +20,15 @@
     <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/43.2.0/ckeditor5.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
+
+
+
     <link rel="stylesheet" href="sweetalert2.min.css">
 
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="~/assets/css/style.css">
+    <link rel="stylesheet" href="~/assets/css/about.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="~/assets/images/favicon.png" />
 </head>
@@ -238,6 +242,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="sweetalert2.min.js"></script>
+  
+
+    
 
     <!-- <script src="~/assets/js/Chart.roundedBarCharts.js"></script> -->
     <!-- End custom js for this page-->
