--- a/Connex.Presentation/Views/Shared/Components/Header/Default.cshtml
+++ b/Connex.Presentation/Views/Shared/Components/Header/Default.cshtml
@@ -1,10 +1,14 @@
 ﻿@model HeaderDto
+@{
+    string currentController = ViewContext.RouteData.Values["controller"]?.ToString()?.ToLower() ??"home";
+    string currentLanguage = Context.Request.Query["lang"].ToString() ?? "az";
 
+}
 
 <header class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="Home">
                 <span>
                     Connex
                 </span>
@@ -16,20 +20,20 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav" style="align-items:center;  font-family: 'Noto Sans', sans-serif;">
-                    <li class="nav-item active">
-                        <a class="nav-link" id="headerHome" href="index.html">Əsas səhifə <span class="sr-only">(current)</span></a>
+                    <li class="nav-item @(currentController == "home" ? "active" : "")">
+                        <a class="nav-link" id="headerHome" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="Home">Əsas səhifə </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="headerAbout" href="about.html"> Haqqımızda</a>
+                    <li class="nav-item @(currentController == "about" ? "active" : "")">
+                        <a class="nav-link" id="headerAbout" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="About"> Haqqımızda </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="headerServices" href="service.html">Xidmətlər</a>
+                    <li class="nav-item @(currentController == "service" ? "active" : "")">
+                        <a class="nav-link" id="headerServices" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="Service">Xidmətlər</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="headerProjects" href="why.html">Layihələr</a>
+                    <li class="nav-item @(currentController == "project" ? "active" : "")">
+                        <a class="nav-link" id="headerProjects" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="Project">Layihələr</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="headerContact" href="team.html">Əlaqə</a>
+                    <li class="nav-item @(currentController == "contact" ? "active" : "")">
+                        <a class="nav-link" id="headerContact" asp-action="index" asp-route-lang="@currentLanguage" asp-controller="Contact">Əlaqə</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
