--- a/Connex.Presentation/wwwroot/css/styles.css
+++ b/Connex.Presentation/wwwroot/css/styles.css
@@ -1,10 +1,4 @@
 ﻿
-.project_section {
-    background-color: #00204a;
-    color: white;
-    padding: 50px;
-}
-
 swiper-container {
     width: 100%;
     margin: 0 auto;
@@ -22,380 +16,12 @@ swiper-slide {
 
     swiper-slide img {
         display: block;
-        width: 364px;
-        height:364px;
-        max-height: 60vh;
+        width: 100%; /* Tam genişlik */
+        max-width: 364px; /* Maksimum genişlik */
+        height: auto; /* Hündürlük avtomatik */
+        max-height: 60vh; /* Maksimum hündürlük */
         object-fit: contain;
     }
-
-.autoplay-progress {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
-    z-index: 10;
-    width: 48px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: var(--swiper-theme-color);
-}
-
-    .autoplay-progress svg {
-        --progress: 0;
-        position: absolute;
-        left: 0;
-        top: 0px;
-        z-index: 10;
-        width: 100%;
-        height: 100%;
-        stroke-width: 4px;
-        stroke: var(--swiper-theme-color);
-        fill: none;
-        stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
-        stroke-dasharray: 125.6;
-        transform: rotate(-90deg);
-    }
-
-
-.dark {
-    background: #00204a;
-}
-
-.light {
-    background: #f3f5f7;
-}
-
-a, a:hover {
-    text-decoration: none;
-    transition: color 0.3s ease-in-out;
-}
-
-#pageHeaderTitle {
-    margin: 2rem 0;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 2.5rem;
-}
-
-/* Cards */
-.postcard {
-    flex-wrap: wrap;
-    display: flex;
-    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
-    border-radius: 10px;
-    margin: 0 0 2rem 0;
-    overflow: hidden;
-    position: relative;
-    color: #ffffff;
-}
-
-    .postcard.dark {
-        background-color: #00204a;
-    }
-
-    .postcard.light {
-        background-color: #e1e5ea;
-    }
-
-    .postcard .t-dark {
-        color: #00204a;
-    }
-
-    .postcard a {
-        color: inherit;
-    }
-
-    .postcard h1, .postcard .h1 {
-        margin-bottom: 0.5rem;
-        font-weight: 500;
-        line-height: 1.2;
-    }
-
-    .postcard .small {
-        font-size: 80%;
-    }
-
-    .postcard .postcard__title {
-        font-size: 1.75rem;
-    }
-
-    .postcard .postcard__img {
-        max-height: 180px;
-        width: 100%;
-        -o-object-fit: cover;
-        object-fit: cover;
-        position: relative;
-    }
-
-    .postcard .postcard__img_link {
-        display: contents;
-    }
-
-    .postcard .postcard__bar {
-        width: 50px;
-        height: 10px;
-        margin: 10px 0;
-        border-radius: 5px;
-        background-color: #424242;
-        transition: width 0.2s ease;
-    }
-
-    .postcard .postcard__text {
-        padding: 1.5rem;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .postcard .postcard__preview-txt {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        text-align: justify;
-        height: 100%;
-    }
-
-    .postcard .postcard__tagbox {
-        display: flex;
-        flex-flow: row wrap;
-        font-size: 14px;
-        margin: 20px 0 0 0;
-        padding: 0;
-        justify-content: center;
-    }
-
-        .postcard .postcard__tagbox .tag__item {
-            display: inline-block;
-            background: rgba(83, 83, 83, 0.4);
-            border-radius: 3px;
-            padding: 2.5px 10px;
-            margin: 0 5px 5px 0;
-            cursor: default;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-            transition: background-color 0.3s;
-        }
-
-            .postcard .postcard__tagbox .tag__item:hover {
-                background: rgba(83, 83, 83, 0.8);
-            }
-
-    .postcard:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-image: linear-gradient(-70deg, #424242, transparent 50%);
-        opacity: 1;
-        border-radius: 10px;
-    }
-
-    .postcard:hover .postcard__bar {
-        width: 100px;
-    }
-
-@media screen and (min-width: 769px) {
-    .postcard {
-        flex-wrap: inherit;
-    }
-
-        .postcard .postcard__title {
-            font-size: 2rem;
-        }
-
-        .postcard .postcard__tagbox {
-            justify-content: start;
-        }
-
-        .postcard .postcard__img {
-            max-width: 300px;
-            max-height: 100%;
-            transition: transform 0.3s ease;
-        }
-
-        .postcard .postcard__text {
-            padding: 3rem;
-            width: 100%;
-        }
-
-        .postcard .media.postcard__text:before {
-            content: "";
-            position: absolute;
-            display: block;
-            background: #00204a;
-            top: -20%;
-            height: 130%;
-            width: 55px;
-        }
-
-        .postcard:hover .postcard__img {
-            transform: scale(1.1);
-        }
-
-        .postcard:nth-child(2n+1) {
-            flex-direction: row;
-        }
-
-        .postcard:nth-child(2n+0) {
-            flex-direction: row-reverse;
-        }
-
-        .postcard:nth-child(2n+1) .postcard__text::before {
-            left: -12px !important;
-            transform: rotate(4deg);
-        }
-
-        .postcard:nth-child(2n+0) .postcard__text::before {
-            right: -12px !important;
-            transform: rotate(-4deg);
-        }
-}
-
-@media screen and (min-width: 1024px) {
-    .postcard__text {
-        padding: 2rem 3.5rem;
-    }
-
-        .postcard__text:before {
-            content: "";
-            position: absolute;
-            display: block;
-            top: -20%;
-            height: 130%;
-            width: 55px;
-        }
-
-    .postcard.dark .postcard__text:before {
-        background: #00204a;
-    }
-
-    .postcard.light .postcard__text:before {
-        background: #e1e5ea;
-    }
-}
-/* COLORS */
-.postcard .postcard__tagbox .green.play:hover {
-    background: #79dd09;
-    color: black;
-}
-
-.green .postcard__title:hover {
-    color: #79dd09;
-}
-
-.green .postcard__bar {
-    background-color: #79dd09;
-}
-
-.green::before {
-    background-image: linear-gradient(-30deg, #00204a, transparent 50%);
-}
-
-.green:nth-child(2n)::before {
-    background-image: linear-gradient(30deg, r#00204a, transparent 50%);
-}
-
-.postcard .postcard__tagbox .blue.play:hover {
-    background: #0076bd;
-}
-
-.blue .postcard__title:hover {
-    color: #0076bd;
-}
-
-.blue .postcard__bar {
-    background-color: #0076bd;
-}
-
-.blue::before {
-    background-image: linear-gradient(-30deg, #00204a, transparent 50%);
-}
-
-.blue:nth-child(2n)::before {
-    background-image: linear-gradient(30deg, #00204a, transparent 50%);
-}
-
-.postcard .postcard__tagbox .red.play:hover {
-    background: #bd150b;
-}
-
-.red .postcard__title:hover {
-    color: #bd150b;
-}
-
-.red .postcard__bar {
-    background-color: #bd150b;
-}
-
-.red::before {
-    background-image: linear-gradient(-30deg, #00204a, transparent 50%);
-}
-
-.red:nth-child(2n)::before {
-    background-image: linear-gradient(30deg, #00204a, transparent 50%);
-}
-
-.postcard .postcard__tagbox .yellow.play:hover {
-    background: #bdbb49;
-    color: black;
-}
-
-.yellow .postcard__title:hover {
-    color: #bdbb49;
-}
-
-.yellow .postcard__bar {
-    background-color: #bdbb49;
-}
-
-.yellow::before {
-    background-image: linear-gradient(-30deg, rgba(189, 187, 73, 0.1), transparent 50%);
-}
-
-.yellow:nth-child(2n)::before {
-    background-image: linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 50%);
-}
-
-@media screen and (min-width: 769px) {
-    .green::before {
-        background-image: linear-gradient(-80deg, rgba(121, 221, 9, 0.1), transparent 50%);
-    }
-
-    .green:nth-child(2n)::before {
-        background-image: linear-gradient(80deg, rgba(121, 221, 9, 0.1), transparent 50%);
-    }
-
-    .blue::before {
-        background-image: linear-gradient(-80deg, rgba(0, 118, 189, 0.1), transparent 50%);
-    }
-
-    .blue:nth-child(2n)::before {
-        background-image: linear-gradient(80deg, rgba(0, 118, 189, 0.1), transparent 50%);
-    }
-
-    .red::before {
-        background-image: linear-gradient(-80deg, rgba(189, 21, 11, 0.1), transparent 50%);
-    }
-
-    .red:nth-child(2n)::before {
-        background-image: linear-gradient(80deg, rgba(189, 21, 11, 0.1), transparent 50%);
-    }
-
-    .yellow::before {
-        background-image: linear-gradient(-80deg, rgba(189, 187, 73, 0.1), transparent 50%);
-    }
-
-    .yellow:nth-child(2n)::before {
-        background-image: linear-gradient(80deg, rgba(189, 187, 73, 0.1), transparent 50%);
-    }
-}
-/*# sourceMappingURL=styles.css.map */
-
-
 
 
 /* Style the dropdown container */
@@ -469,4 +95,87 @@ a, a:hover {
 /* Add hover effect for links */
 .dropdown-content a:hover {
     background-color: #f0f0f0;
+}
+
+
+
+.project_section {
+    background-color: #00204a;
+    color: white;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.card-section {
+    margin: 30px 0;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
+    background-color: #00204a;
+    align-items: center;
+    width: 100%;
+}
+
+.card {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 15px;
+    width: 300px;
+    text-align: center;
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Məzmunu bərabər paylamaq üçün */
+    height: 500px; /* Kartların hündürlüyü */
+    color: black;
+}
+
+    .card:hover {
+        transform: translateY(-5px);
+    }
+
+    .card img {
+        max-width: 100%;
+        border-radius: 8px;
+        height: 150px; /* Şəkilin hündürlüyü */
+        object-fit: cover; /* Şəkilin düzülüşü */
+    }
+
+    .card .cardTitle {
+        margin: 10px 0 5px;
+    }
+
+    .card .cardDesc {
+        color: #666;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 6;
+    }
+
+.detail-button {
+    background-color: #00204a;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+    .detail-button:hover {
+        background-color: #0056b3;
+    }
+
+
+
+.service-name {
+    min-height: 80px; /* Başlıqların minimum hündürlüyü, ən uzun başlığa uyğun artırıla bilər */
+    line-height: 1.2; /* Sətir aralığını düzəldir */
+    word-break: break-word; /* Uzanan sözləri qırır */
 }
