added login file and customized error messages

--- a/Connex.Presentation/Views/About/Index.cshtml
+++ b/Connex.Presentation/Views/About/Index.cshtml
@@ -1,7 +1,13 @@
 ﻿<style>
 
     .aboutImage {
-        max-width: 600px !important;
+        width: 100%;
+        height:100%;
+        object-fit: cover;
+    }
+
+    .aboutImageParent {
+        max-width: 528px !important;
         max-height: 600px !important;
     }
 
@@ -529,7 +535,7 @@
         <div class="container-tps style-nBn9r " id="style-nBn9r">
             <div class="row-vbe g-ptx gx-1lo item-i56 style-s9ltV @(i%2==1 ? "reverseSection" : "")" id="style-s9ltV">
                 <div class="col-tar style-TCIeS" id="style-TCIeS">
-                    <div class="rel-bg9 rounded-z4s overflow-g7c shadow-yg4 style-HczWh" id="style-HczWh">
+                    <div class="rel-bg9 rounded-z4s overflow-g7c shadow-yg4 style-HczWh aboutImageParent" id="style-HczWh">
 
                         <img src="@about.ImagePath" class="img-qzh aboutImage">
                     </div>
