--- a/Connex.Presentation/Views/Shared/Components/Footer/Default.cshtml
+++ b/Connex.Presentation/Views/Shared/Components/Footer/Default.cshtml
@@ -45,6 +45,9 @@
                     <a href="@Model["InstagramLink"]">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
+                    <a href="@Model["TiktokLink"]">
+                        <i class="fa-brands fa-tiktok" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 info_col">
