--- a/Connex.Presentation/wwwroot/css/styles.css
+++ b/Connex.Presentation/wwwroot/css/styles.css
@@ -179,3 +179,85 @@ swiper-slide {
     line-height: 1.2; /* Sətir aralığını düzəldir */
     word-break: break-word; /* Uzanan sözləri qırır */
 }
+
+
+
+/* Full-screen overlay that covers the entire screen */
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #00204a; /* Semi-transparent dark background */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Ensure it’s above other content */
+    visibility: hidden; /* Initially hidden */
+}
+
+/* Loader animation styles */
+.loader {
+    transform: rotateZ(45deg);
+    perspective: 1000px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    color: #fff;
+    position: relative;
+}
+
+    .loader:before,
+    .loader:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: inherit;
+        height: inherit;
+        border-radius: 50%;
+        transform: rotateX(70deg);
+        animation: spin 1s linear infinite;
+    }
+
+    .loader:after {
+        color: #FF3D00;
+        transform: rotateY(70deg);
+        animation-delay: .4s;
+    }
+
+@keyframes spin {
+    0%, 100% {
+        box-shadow: .5em 0px 0 0px currentcolor;
+    }
+
+    12% {
+        box-shadow: .5em .5em 0 0 currentcolor;
+    }
+
+    25% {
+        box-shadow: 0 .5em 0 0px currentcolor;
+    }
+
+    37% {
+        box-shadow: -.5em .5em 0 0 currentcolor;
+    }
+
+    50% {
+        box-shadow: -.5em 0 0 0 currentcolor;
+    }
+
+    62% {
+        box-shadow: -.5em -.5em 0 0 currentcolor;
+    }
+
+    75% {
+        box-shadow: 0px -.5em 0 0 currentcolor;
+    }
+
+    87% {
+        box-shadow: .5em -.5em 0 0 currentcolor;
+    }
+}
